--- a/homework.ipynb
+++ b/homework.ipynb
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "teDxcSlJnS34"
       },
@@ -99,7 +99,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p1(seq):\n",
-        "    ..."
+        " return [x for x in seq if x is not None]"
       ]
     },
     {
@@ -115,11 +115,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "1jZXBLhmns--"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[0, 1, 2, 4, 'a', 'b']"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p1([0, 1, 2, None, 4, \"a\", \"b\"])"
       ]
@@ -989,7 +1000,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.6"
+      "version": "3.12.1"
     }
   },
   "nbformat": 4,
