--- a/homework.ipynb
+++ b/homework.ipynb
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "id": "teDxcSlJnS34"
       },
@@ -115,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "id": "1jZXBLhmns--"
       },
@@ -126,7 +126,7 @@
               "[0, 1, 2, 4, 'a', 'b']"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -148,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "90vL5z5XnigG"
       },
@@ -157,7 +157,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p2(seq):\n",
-        "    ..."
+        "    return [x for x in seq if x]"
       ]
     },
     {
@@ -173,11 +173,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "yCOW3O09oHV5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[1, 2, 4, 'a', 'b', True]"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p2([0, 1, 2, None, 4, \"a\", \"b\", False, True])"
       ]
@@ -195,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "xTB_tXMTobVs"
       },
@@ -219,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "tWHqPjrXofNi"
       },
@@ -242,7 +253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "Mhy3u6QKDBWJ"
       },
@@ -266,7 +277,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "xAHEoxzuoqyO"
       },
@@ -278,7 +289,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "A-5b6g57osqv"
       },
@@ -290,7 +301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "m9TS13UsotoN"
       },
@@ -302,7 +313,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "-uoB3IAKoutu"
       },
@@ -325,7 +336,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "1-JbJbiNDPgN"
       },
@@ -349,7 +360,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "-nZbMHZ7rkwo"
       },
@@ -361,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "8d-NwdpArqCI"
       },
@@ -384,7 +395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "uWTJJBu2Dapd"
       },
@@ -408,7 +419,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "6rvuO-6UsAo1"
       },
@@ -433,7 +444,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "3Sp5OQEImUN_"
       },
@@ -449,11 +460,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "Rle-GnKwmoFV"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Ellipsis"
+            ]
+          },
+          "execution_count": 23,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
@@ -472,11 +494,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "tbD9BaI5sdFW"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'a': 1, 'b': 52, 'c': 513},\n",
+              " {'a': 2, 'b': 52, 'c': 123},\n",
+              " {'a': 3, 'b': 52, 'c': 999},\n",
+              " {'a': 4, 'b': 52, 'c': 456},\n",
+              " {'a': 5, 'b': 52, 'c': 321}]"
+            ]
+          },
+          "execution_count": 24,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p7"
       ]
@@ -494,7 +531,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "YEq-hQMUlnLG"
       },
@@ -518,7 +555,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "id": "5nAyUIwsszXs"
       },
@@ -529,7 +566,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "id": "dR_hzfBas03e"
       },
@@ -540,7 +577,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "id": "jxiZMLsqs7X5"
       },
@@ -568,7 +605,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
         "id": "LCatOFAUDkhC"
       },
@@ -592,11 +629,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
         "id": "RQwDteRUuPtE"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'score': 0},\n",
+              " {'score': 1},\n",
+              " {'score': 2},\n",
+              " {'score': 3},\n",
+              " {'score': 4},\n",
+              " {'score': 5},\n",
+              " {'score': 6},\n",
+              " {'score': 7},\n",
+              " {'score': 8},\n",
+              " {'score': 9}]"
+            ]
+          },
+          "execution_count": 30,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p9_example_input = [{\"score\": i} for i in range(10)]\n",
         "p9_example_input"
@@ -604,7 +661,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "id": "J6JWdCbpuie5"
       },
@@ -626,7 +683,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "id": "XpxH3dGWDux_"
       },
@@ -650,7 +707,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
         "id": "u_ZFPFEJ4AU1"
       },
@@ -661,7 +718,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "id": "eJYKi6QE4HkR"
       },
@@ -685,7 +742,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -696,7 +753,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "id": "xfw7S3gnEDg-"
       },
@@ -721,7 +778,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
         "id": "Msv-S8sqEWQn"
       },
@@ -749,7 +806,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
         "id": "yc26DedyE2JT"
       },
@@ -790,7 +847,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
         "id": "9mv3iK4NFL_d"
       },
@@ -829,7 +886,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {
         "id": "C9QHxIqiGHzX"
       },
@@ -860,11 +917,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "metadata": {
         "id": "u1gwOF_uGL_2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Ellipsis"
+            ]
+          },
+          "execution_count": 41,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
@@ -889,11 +957,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "metadata": {
         "id": "Z_jb-O9nGOJo"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Ellipsis"
+            ]
+          },
+          "execution_count": 42,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
@@ -913,11 +992,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {
         "id": "QrC_w0YGGQRZ"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Ellipsis"
+            ]
+          },
+          "execution_count": 43,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
@@ -937,11 +1027,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {
         "id": "aQ7IcY3VGTac"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Ellipsis"
+            ]
+          },
+          "execution_count": 44,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
@@ -970,11 +1071,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "metadata": {
         "id": "vHmndpn0GWed"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Ellipsis"
+            ]
+          },
+          "execution_count": 45,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
