--- a/homework.ipynb
+++ b/homework.ipynb
@@ -206,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 46,
       "metadata": {
         "id": "xTB_tXMTobVs"
       },
@@ -215,7 +215,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p3(seq):\n",
-        "    ..."
+        "    return [x for x in seq if x is not None and not x]"
       ]
     },
     {
@@ -230,11 +230,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 47,
       "metadata": {
         "id": "tWHqPjrXofNi"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[0, False]"
+            ]
+          },
+          "execution_count": 47,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p3([0, 1, 2, None, 4, \"a\", \"b\", False, True])"
       ]
