--- a/homework.ipynb
+++ b/homework.ipynb
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 61,
       "metadata": {
         "id": "teDxcSlJnS34"
       },
@@ -115,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 62,
       "metadata": {
         "id": "1jZXBLhmns--"
       },
@@ -126,7 +126,7 @@
               "[0, 1, 2, 4, 'a', 'b']"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 62,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -148,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 63,
       "metadata": {
         "id": "90vL5z5XnigG"
       },
@@ -173,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 64,
       "metadata": {
         "id": "yCOW3O09oHV5"
       },
@@ -184,7 +184,7 @@
               "[1, 2, 4, 'a', 'b', True]"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 64,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -206,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 65,
       "metadata": {
         "id": "xTB_tXMTobVs"
       },
@@ -230,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 66,
       "metadata": {
         "id": "tWHqPjrXofNi"
       },
@@ -241,7 +241,7 @@
               "[0, False]"
             ]
           },
-          "execution_count": 47,
+          "execution_count": 66,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -264,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 67,
       "metadata": {
         "id": "Mhy3u6QKDBWJ"
       },
@@ -273,7 +273,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p4(n):\n",
-        "    ..."
+        "    return sum(range(n))"
       ]
     },
     {
@@ -288,11 +288,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 68,
       "metadata": {
         "id": "xAHEoxzuoqyO"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "execution_count": 68,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# p4(0) should be 0\n",
         "p4(0)"
@@ -300,11 +311,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 69,
       "metadata": {
         "id": "A-5b6g57osqv"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "execution_count": 69,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# p4(1) should also be 0\n",
         "p4(1)"
@@ -312,11 +334,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 70,
       "metadata": {
         "id": "m9TS13UsotoN"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "execution_count": 70,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# p4(2) should be 0+1=1\n",
         "p4(2)"
@@ -324,11 +357,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 71,
       "metadata": {
         "id": "-uoB3IAKoutu"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "45"
+            ]
+          },
+          "execution_count": 71,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# p4(10) should be 0+1+2+3+4+5+6+7+8+9=45\n",
         "p4(10)"
@@ -347,7 +391,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 72,
       "metadata": {
         "id": "1-JbJbiNDPgN"
       },
@@ -371,7 +415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 73,
       "metadata": {
         "id": "-nZbMHZ7rkwo"
       },
@@ -383,7 +427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 74,
       "metadata": {
         "id": "8d-NwdpArqCI"
       },
@@ -406,7 +450,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 75,
       "metadata": {
         "id": "uWTJJBu2Dapd"
       },
@@ -430,7 +474,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 76,
       "metadata": {
         "id": "6rvuO-6UsAo1"
       },
@@ -455,7 +499,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 77,
       "metadata": {
         "id": "3Sp5OQEImUN_"
       },
@@ -471,7 +515,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 78,
       "metadata": {
         "id": "Rle-GnKwmoFV"
       },
@@ -482,7 +526,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 78,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -505,7 +549,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 79,
       "metadata": {
         "id": "tbD9BaI5sdFW"
       },
@@ -520,7 +564,7 @@
               " {'a': 5, 'b': 52, 'c': 321}]"
             ]
           },
-          "execution_count": 24,
+          "execution_count": 79,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -542,7 +586,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 80,
       "metadata": {
         "id": "YEq-hQMUlnLG"
       },
@@ -566,7 +610,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 81,
       "metadata": {
         "id": "5nAyUIwsszXs"
       },
@@ -577,7 +621,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 82,
       "metadata": {
         "id": "dR_hzfBas03e"
       },
@@ -588,7 +632,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 83,
       "metadata": {
         "id": "jxiZMLsqs7X5"
       },
@@ -616,7 +660,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 84,
       "metadata": {
         "id": "LCatOFAUDkhC"
       },
@@ -640,7 +684,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 85,
       "metadata": {
         "id": "RQwDteRUuPtE"
       },
@@ -660,7 +704,7 @@
               " {'score': 9}]"
             ]
           },
-          "execution_count": 30,
+          "execution_count": 85,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -672,7 +716,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 86,
       "metadata": {
         "id": "J6JWdCbpuie5"
       },
@@ -694,7 +738,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 87,
       "metadata": {
         "id": "XpxH3dGWDux_"
       },
@@ -718,7 +762,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 88,
       "metadata": {
         "id": "u_ZFPFEJ4AU1"
       },
@@ -729,7 +773,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 89,
       "metadata": {
         "id": "eJYKi6QE4HkR"
       },
@@ -753,7 +797,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 90,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -764,7 +808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 91,
       "metadata": {
         "id": "xfw7S3gnEDg-"
       },
@@ -789,7 +833,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 92,
       "metadata": {
         "id": "Msv-S8sqEWQn"
       },
@@ -817,7 +861,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 93,
       "metadata": {
         "id": "yc26DedyE2JT"
       },
@@ -858,7 +902,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 94,
       "metadata": {
         "id": "9mv3iK4NFL_d"
       },
@@ -897,7 +941,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 95,
       "metadata": {
         "id": "C9QHxIqiGHzX"
       },
@@ -928,7 +972,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 96,
       "metadata": {
         "id": "u1gwOF_uGL_2"
       },
@@ -939,7 +983,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 41,
+          "execution_count": 96,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -968,7 +1012,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 97,
       "metadata": {
         "id": "Z_jb-O9nGOJo"
       },
@@ -979,7 +1023,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 42,
+          "execution_count": 97,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1003,7 +1047,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 98,
       "metadata": {
         "id": "QrC_w0YGGQRZ"
       },
@@ -1014,7 +1058,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 43,
+          "execution_count": 98,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1038,7 +1082,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 99,
       "metadata": {
         "id": "aQ7IcY3VGTac"
       },
@@ -1049,7 +1093,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 44,
+          "execution_count": 99,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1082,7 +1126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 100,
       "metadata": {
         "id": "vHmndpn0GWed"
       },
@@ -1093,7 +1137,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 45,
+          "execution_count": 100,
           "metadata": {},
           "output_type": "execute_result"
         }
