--- a/homework.ipynb
+++ b/homework.ipynb
@@ -391,7 +391,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 103,
       "metadata": {
         "id": "1-JbJbiNDPgN"
       },
@@ -400,7 +400,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p5(n):\n",
-        "    ..."
+        "    return sum(k for k in range(n) if k % 5 != 0)"
       ]
     },
     {
@@ -415,11 +415,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 104,
       "metadata": {
         "id": "-nZbMHZ7rkwo"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "execution_count": 104,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# p5(0) should be 0\n",
         "p5(0)"
@@ -427,11 +438,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 105,
       "metadata": {
         "id": "8d-NwdpArqCI"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "execution_count": 105,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# p5(6) should be 1+2+3+4=10 (note 5 skipped)\n",
         "p5(6)"
