--- a/homework.ipynb
+++ b/homework.ipynb
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 108,
       "metadata": {
         "id": "teDxcSlJnS34"
       },
@@ -115,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 109,
       "metadata": {
         "id": "1jZXBLhmns--"
       },
@@ -126,7 +126,7 @@
               "[0, 1, 2, 4, 'a', 'b']"
             ]
           },
-          "execution_count": 62,
+          "execution_count": 109,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -148,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 110,
       "metadata": {
         "id": "90vL5z5XnigG"
       },
@@ -173,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 111,
       "metadata": {
         "id": "yCOW3O09oHV5"
       },
@@ -184,7 +184,7 @@
               "[1, 2, 4, 'a', 'b', True]"
             ]
           },
-          "execution_count": 64,
+          "execution_count": 111,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -206,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 112,
       "metadata": {
         "id": "xTB_tXMTobVs"
       },
@@ -230,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 113,
       "metadata": {
         "id": "tWHqPjrXofNi"
       },
@@ -241,7 +241,7 @@
               "[0, False]"
             ]
           },
-          "execution_count": 66,
+          "execution_count": 113,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -264,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 114,
       "metadata": {
         "id": "Mhy3u6QKDBWJ"
       },
@@ -288,7 +288,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 115,
       "metadata": {
         "id": "xAHEoxzuoqyO"
       },
@@ -299,7 +299,7 @@
               "0"
             ]
           },
-          "execution_count": 68,
+          "execution_count": 115,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -311,7 +311,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 116,
       "metadata": {
         "id": "A-5b6g57osqv"
       },
@@ -322,7 +322,7 @@
               "0"
             ]
           },
-          "execution_count": 69,
+          "execution_count": 116,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -334,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 117,
       "metadata": {
         "id": "m9TS13UsotoN"
       },
@@ -345,7 +345,7 @@
               "1"
             ]
           },
-          "execution_count": 70,
+          "execution_count": 117,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -357,7 +357,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 118,
       "metadata": {
         "id": "-uoB3IAKoutu"
       },
@@ -368,7 +368,7 @@
               "45"
             ]
           },
-          "execution_count": 71,
+          "execution_count": 118,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -391,7 +391,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 119,
       "metadata": {
         "id": "1-JbJbiNDPgN"
       },
@@ -415,7 +415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 120,
       "metadata": {
         "id": "-nZbMHZ7rkwo"
       },
@@ -426,7 +426,7 @@
               "0"
             ]
           },
-          "execution_count": 104,
+          "execution_count": 120,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -438,7 +438,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 121,
       "metadata": {
         "id": "8d-NwdpArqCI"
       },
@@ -449,7 +449,7 @@
               "10"
             ]
           },
-          "execution_count": 105,
+          "execution_count": 121,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -472,7 +472,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 122,
       "metadata": {
         "id": "uWTJJBu2Dapd"
       },
@@ -481,7 +481,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p6(dictionaries):\n",
-        "    ..."
+        "    return max(dictionaries, key=lambda d: d['score'])"
       ]
     },
     {
@@ -496,11 +496,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 123,
       "metadata": {
         "id": "6rvuO-6UsAo1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'score': 13.1}"
+            ]
+          },
+          "execution_count": 123,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p6([{\"score\": 1},\n",
         "    {\"score\": 13.1},\n",
@@ -521,7 +532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 124,
       "metadata": {
         "id": "3Sp5OQEImUN_"
       },
@@ -537,7 +548,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 125,
       "metadata": {
         "id": "Rle-GnKwmoFV"
       },
@@ -548,7 +559,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 78,
+          "execution_count": 125,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -571,7 +582,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 126,
       "metadata": {
         "id": "tbD9BaI5sdFW"
       },
@@ -586,7 +597,7 @@
               " {'a': 5, 'b': 52, 'c': 321}]"
             ]
           },
-          "execution_count": 79,
+          "execution_count": 126,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -608,7 +619,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 127,
       "metadata": {
         "id": "YEq-hQMUlnLG"
       },
@@ -632,7 +643,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 128,
       "metadata": {
         "id": "5nAyUIwsszXs"
       },
@@ -643,7 +654,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 129,
       "metadata": {
         "id": "dR_hzfBas03e"
       },
@@ -654,7 +665,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 130,
       "metadata": {
         "id": "jxiZMLsqs7X5"
       },
@@ -682,7 +693,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 131,
       "metadata": {
         "id": "LCatOFAUDkhC"
       },
@@ -706,7 +717,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 132,
       "metadata": {
         "id": "RQwDteRUuPtE"
       },
@@ -726,7 +737,7 @@
               " {'score': 9}]"
             ]
           },
-          "execution_count": 85,
+          "execution_count": 132,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -738,7 +749,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 133,
       "metadata": {
         "id": "J6JWdCbpuie5"
       },
@@ -760,7 +771,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 134,
       "metadata": {
         "id": "XpxH3dGWDux_"
       },
@@ -784,7 +795,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 135,
       "metadata": {
         "id": "u_ZFPFEJ4AU1"
       },
@@ -795,7 +806,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 136,
       "metadata": {
         "id": "eJYKi6QE4HkR"
       },
@@ -819,7 +830,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 137,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -830,7 +841,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 138,
       "metadata": {
         "id": "xfw7S3gnEDg-"
       },
@@ -855,7 +866,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 139,
       "metadata": {
         "id": "Msv-S8sqEWQn"
       },
@@ -883,7 +894,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 140,
       "metadata": {
         "id": "yc26DedyE2JT"
       },
@@ -924,7 +935,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 141,
       "metadata": {
         "id": "9mv3iK4NFL_d"
       },
@@ -963,7 +974,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 142,
       "metadata": {
         "id": "C9QHxIqiGHzX"
       },
@@ -994,7 +1005,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 143,
       "metadata": {
         "id": "u1gwOF_uGL_2"
       },
@@ -1005,7 +1016,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 96,
+          "execution_count": 143,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1034,7 +1045,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 144,
       "metadata": {
         "id": "Z_jb-O9nGOJo"
       },
@@ -1045,7 +1056,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 97,
+          "execution_count": 144,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1069,7 +1080,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 145,
       "metadata": {
         "id": "QrC_w0YGGQRZ"
       },
@@ -1080,7 +1091,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 98,
+          "execution_count": 145,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1104,7 +1115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 146,
       "metadata": {
         "id": "aQ7IcY3VGTac"
       },
@@ -1115,7 +1126,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 99,
+          "execution_count": 146,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1148,7 +1159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 147,
       "metadata": {
         "id": "vHmndpn0GWed"
       },
@@ -1159,7 +1170,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 100,
+          "execution_count": 147,
           "metadata": {},
           "output_type": "execute_result"
         }
