--- a/homework.ipynb
+++ b/homework.ipynb
@@ -548,27 +548,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": 151,
       "metadata": {
         "id": "Rle-GnKwmoFV"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "Ellipsis"
-            ]
-          },
-          "execution_count": 125,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
         "# sort p7 here\n",
-        "..."
+        "p7 = sorted(p7, key=lambda x: x['c'])"
       ]
     },
     {
@@ -582,7 +571,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": 152,
       "metadata": {
         "id": "tbD9BaI5sdFW"
       },
@@ -590,14 +579,14 @@
         {
           "data": {
             "text/plain": [
-              "[{'a': 1, 'b': 52, 'c': 513},\n",
-              " {'a': 2, 'b': 52, 'c': 123},\n",
-              " {'a': 3, 'b': 52, 'c': 999},\n",
+              "[{'a': 2, 'b': 52, 'c': 123},\n",
+              " {'a': 5, 'b': 52, 'c': 321},\n",
               " {'a': 4, 'b': 52, 'c': 456},\n",
-              " {'a': 5, 'b': 52, 'c': 321}]"
+              " {'a': 1, 'b': 52, 'c': 513},\n",
+              " {'a': 3, 'b': 52, 'c': 999}]"
             ]
           },
-          "execution_count": 126,
+          "execution_count": 152,
           "metadata": {},
           "output_type": "execute_result"
         }
