--- a/homework.ipynb
+++ b/homework.ipynb
@@ -608,7 +608,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 127,
+      "execution_count": 153,
       "metadata": {
         "id": "YEq-hQMUlnLG"
       },
@@ -617,7 +617,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p8(seq):\n",
-        "    ..."
+        "    return sorted(seq, key=lambda d: d['score'])"
       ]
     },
     {
@@ -632,22 +632,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 128,
+      "execution_count": 157,
       "metadata": {
         "id": "5nAyUIwsszXs"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'score': 11}, {'score': 25}]"
+            ]
+          },
+          "execution_count": 157,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "p8([])"
+        "p8([{\"score\": 25}, {\"score\": 11}])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 129,
+      "execution_count": 155,
       "metadata": {
         "id": "dR_hzfBas03e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'score': 1}, {'score': 3}]"
+            ]
+          },
+          "execution_count": 155,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p8([{\"score\": 3}, {\"score\": 1}])"
       ]
