--- a/homework.ipynb
+++ b/homework.ipynb
@@ -704,7 +704,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 131,
+      "execution_count": 162,
       "metadata": {
         "id": "LCatOFAUDkhC"
       },
@@ -713,7 +713,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p9(dictionaries):\n",
-        "    ..."
+        "    return sorted(dictionaries, key=lambda d: d['score'], reverse=True)[:5]"
       ]
     },
     {
@@ -728,7 +728,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 132,
+      "execution_count": 164,
       "metadata": {
         "id": "RQwDteRUuPtE"
       },
@@ -748,7 +748,7 @@
               " {'score': 9}]"
             ]
           },
-          "execution_count": 132,
+          "execution_count": 164,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -760,11 +760,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 133,
+      "execution_count": 165,
       "metadata": {
         "id": "J6JWdCbpuie5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'score': 9}, {'score': 8}, {'score': 7}, {'score': 6}, {'score': 5}]"
+            ]
+          },
+          "execution_count": 165,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p9(p9_example_input)"
       ]
