--- a/homework.ipynb
+++ b/homework.ipynb
@@ -793,7 +793,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 134,
+      "execution_count": 172,
       "metadata": {
         "id": "XpxH3dGWDux_"
       },
@@ -802,7 +802,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p10(dictionaries, score_function):\n",
-        "    ..."
+        "    return max(dictionaries, key=score_function)"
       ]
     },
     {
@@ -817,22 +817,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 135,
+      "execution_count": 173,
       "metadata": {
         "id": "u_ZFPFEJ4AU1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'score': 5}"
+            ]
+          },
+          "execution_count": 173,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p10([{\"score\": 3}, {\"score\": 5}], lambda r: r[\"score\"])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": 174,
       "metadata": {
         "id": "eJYKi6QE4HkR"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'a': 3}"
+            ]
+          },
+          "execution_count": 174,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# note this sorts by negative \"a\"\n",
         "p10([{\"a\": 5}, {\"a\": 3}], lambda r: -r[\"a\"])"
