--- a/homework.ipynb
+++ b/homework.ipynb
@@ -874,7 +874,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 137,
+      "execution_count": 177,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -885,7 +885,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 138,
+      "execution_count": 178,
       "metadata": {
         "id": "xfw7S3gnEDg-"
       },
@@ -894,7 +894,9 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p11(n):\n",
-        "    ..."
+        "    if n == 0:\n",
+        "        return 1\n",
+        "    return math.prod(range(1, n + 1))"
       ]
     },
     {
