--- a/homework.ipynb
+++ b/homework.ipynb
@@ -912,7 +912,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 139,
+      "execution_count": 191,
       "metadata": {
         "id": "Msv-S8sqEWQn"
       },
@@ -921,7 +921,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p12(dictionaries, key):\n",
-        "    ..."
+        "    return {d[key] for d in dictionaries if key in d}"
       ]
     },
     {
