--- a/homework.ipynb
+++ b/homework.ipynb
@@ -940,7 +940,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 140,
+      "execution_count": 199,
       "metadata": {
         "id": "yc26DedyE2JT"
       },
@@ -949,7 +949,10 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p13(dictionaries, key):\n",
-        "    ..."
+        "    for d in dictionaries:\n",
+        "        if d.get(key) in (\"\", None):\n",
+        "            return d\n",
+        "    return None"
       ]
     },
     {
