--- a/homework.ipynb
+++ b/homework.ipynb
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 202,
       "metadata": {
         "id": "teDxcSlJnS34"
       },
@@ -115,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": 203,
       "metadata": {
         "id": "1jZXBLhmns--"
       },
@@ -126,7 +126,7 @@
               "[0, 1, 2, 4, 'a', 'b']"
             ]
           },
-          "execution_count": 109,
+          "execution_count": 203,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -148,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": 204,
       "metadata": {
         "id": "90vL5z5XnigG"
       },
@@ -173,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": 205,
       "metadata": {
         "id": "yCOW3O09oHV5"
       },
@@ -184,7 +184,7 @@
               "[1, 2, 4, 'a', 'b', True]"
             ]
           },
-          "execution_count": 111,
+          "execution_count": 205,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -206,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 206,
       "metadata": {
         "id": "xTB_tXMTobVs"
       },
@@ -230,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": 207,
       "metadata": {
         "id": "tWHqPjrXofNi"
       },
@@ -241,7 +241,7 @@
               "[0, False]"
             ]
           },
-          "execution_count": 113,
+          "execution_count": 207,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -264,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": 208,
       "metadata": {
         "id": "Mhy3u6QKDBWJ"
       },
@@ -288,7 +288,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 209,
       "metadata": {
         "id": "xAHEoxzuoqyO"
       },
@@ -299,7 +299,7 @@
               "0"
             ]
           },
-          "execution_count": 115,
+          "execution_count": 209,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -311,7 +311,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": 210,
       "metadata": {
         "id": "A-5b6g57osqv"
       },
@@ -322,7 +322,7 @@
               "0"
             ]
           },
-          "execution_count": 116,
+          "execution_count": 210,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -334,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": 211,
       "metadata": {
         "id": "m9TS13UsotoN"
       },
@@ -345,7 +345,7 @@
               "1"
             ]
           },
-          "execution_count": 117,
+          "execution_count": 211,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -357,7 +357,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 118,
+      "execution_count": 212,
       "metadata": {
         "id": "-uoB3IAKoutu"
       },
@@ -368,7 +368,7 @@
               "45"
             ]
           },
-          "execution_count": 118,
+          "execution_count": 212,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -391,7 +391,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": 213,
       "metadata": {
         "id": "1-JbJbiNDPgN"
       },
@@ -415,7 +415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 120,
+      "execution_count": 214,
       "metadata": {
         "id": "-nZbMHZ7rkwo"
       },
@@ -426,7 +426,7 @@
               "0"
             ]
           },
-          "execution_count": 120,
+          "execution_count": 214,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -438,7 +438,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 121,
+      "execution_count": 215,
       "metadata": {
         "id": "8d-NwdpArqCI"
       },
@@ -449,7 +449,7 @@
               "10"
             ]
           },
-          "execution_count": 121,
+          "execution_count": 215,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -472,7 +472,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": 216,
       "metadata": {
         "id": "uWTJJBu2Dapd"
       },
@@ -496,7 +496,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": 217,
       "metadata": {
         "id": "6rvuO-6UsAo1"
       },
@@ -507,7 +507,7 @@
               "{'score': 13.1}"
             ]
           },
-          "execution_count": 123,
+          "execution_count": 217,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -532,7 +532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": 218,
       "metadata": {
         "id": "3Sp5OQEImUN_"
       },
@@ -548,7 +548,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 151,
+      "execution_count": 219,
       "metadata": {
         "id": "Rle-GnKwmoFV"
       },
@@ -571,7 +571,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 152,
+      "execution_count": 220,
       "metadata": {
         "id": "tbD9BaI5sdFW"
       },
@@ -586,7 +586,7 @@
               " {'a': 3, 'b': 52, 'c': 999}]"
             ]
           },
-          "execution_count": 152,
+          "execution_count": 220,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -608,7 +608,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 153,
+      "execution_count": 221,
       "metadata": {
         "id": "YEq-hQMUlnLG"
       },
@@ -632,7 +632,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 157,
+      "execution_count": 222,
       "metadata": {
         "id": "5nAyUIwsszXs"
       },
@@ -643,7 +643,7 @@
               "[{'score': 11}, {'score': 25}]"
             ]
           },
-          "execution_count": 157,
+          "execution_count": 222,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -654,7 +654,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 155,
+      "execution_count": 223,
       "metadata": {
         "id": "dR_hzfBas03e"
       },
@@ -665,7 +665,7 @@
               "[{'score': 1}, {'score': 3}]"
             ]
           },
-          "execution_count": 155,
+          "execution_count": 223,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -676,11 +676,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 130,
+      "execution_count": 224,
       "metadata": {
         "id": "jxiZMLsqs7X5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'score': 3}, {'score': 5}, {'score': 6}]"
+            ]
+          },
+          "execution_count": 224,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# this input sequence is a tuple, so it does not have a sort method.\n",
         "\n",
@@ -704,7 +715,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 162,
+      "execution_count": 225,
       "metadata": {
         "id": "LCatOFAUDkhC"
       },
@@ -728,7 +739,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 164,
+      "execution_count": 226,
       "metadata": {
         "id": "RQwDteRUuPtE"
       },
@@ -748,7 +759,7 @@
               " {'score': 9}]"
             ]
           },
-          "execution_count": 164,
+          "execution_count": 226,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -760,7 +771,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 165,
+      "execution_count": 227,
       "metadata": {
         "id": "J6JWdCbpuie5"
       },
@@ -771,7 +782,7 @@
               "[{'score': 9}, {'score': 8}, {'score': 7}, {'score': 6}, {'score': 5}]"
             ]
           },
-          "execution_count": 165,
+          "execution_count": 227,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -793,7 +804,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 172,
+      "execution_count": 228,
       "metadata": {
         "id": "XpxH3dGWDux_"
       },
@@ -817,7 +828,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 173,
+      "execution_count": 229,
       "metadata": {
         "id": "u_ZFPFEJ4AU1"
       },
@@ -828,7 +839,7 @@
               "{'score': 5}"
             ]
           },
-          "execution_count": 173,
+          "execution_count": 229,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -839,7 +850,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 174,
+      "execution_count": 230,
       "metadata": {
         "id": "eJYKi6QE4HkR"
       },
@@ -850,7 +861,7 @@
               "{'a': 3}"
             ]
           },
-          "execution_count": 174,
+          "execution_count": 230,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -874,7 +885,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 177,
+      "execution_count": 231,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -885,7 +896,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 178,
+      "execution_count": 232,
       "metadata": {
         "id": "xfw7S3gnEDg-"
       },
@@ -912,7 +923,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 191,
+      "execution_count": 233,
       "metadata": {
         "id": "Msv-S8sqEWQn"
       },
@@ -940,7 +951,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 199,
+      "execution_count": 234,
       "metadata": {
         "id": "yc26DedyE2JT"
       },
@@ -984,7 +995,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 141,
+      "execution_count": 235,
       "metadata": {
         "id": "9mv3iK4NFL_d"
       },
@@ -1023,7 +1034,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 142,
+      "execution_count": 236,
       "metadata": {
         "id": "C9QHxIqiGHzX"
       },
@@ -1054,7 +1065,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 143,
+      "execution_count": 237,
       "metadata": {
         "id": "u1gwOF_uGL_2"
       },
@@ -1065,7 +1076,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 143,
+          "execution_count": 237,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1094,7 +1105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 144,
+      "execution_count": 238,
       "metadata": {
         "id": "Z_jb-O9nGOJo"
       },
@@ -1105,7 +1116,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 144,
+          "execution_count": 238,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1129,7 +1140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": 239,
       "metadata": {
         "id": "QrC_w0YGGQRZ"
       },
@@ -1140,7 +1151,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 145,
+          "execution_count": 239,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1164,7 +1175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 146,
+      "execution_count": 240,
       "metadata": {
         "id": "aQ7IcY3VGTac"
       },
@@ -1175,7 +1186,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 146,
+          "execution_count": 240,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1208,7 +1219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 147,
+      "execution_count": 241,
       "metadata": {
         "id": "vHmndpn0GWed"
       },
@@ -1219,7 +1230,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 147,
+          "execution_count": 241,
           "metadata": {},
           "output_type": "execute_result"
         }
