--- a/homework.ipynb
+++ b/homework.ipynb
@@ -1118,26 +1118,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 282,
+      "execution_count": 299,
       "metadata": {
         "id": "QrC_w0YGGQRZ"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "Ellipsis"
-            ]
-          },
-          "execution_count": 282,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "..."
+        "def p18(lst):\n",
+        "    return len(lst) >= 18"
       ]
     },
     {
