--- a/homework.ipynb
+++ b/homework.ipynb
@@ -1143,26 +1143,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 283,
+      "execution_count": 301,
       "metadata": {
         "id": "aQ7IcY3VGTac"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "Ellipsis"
-            ]
-          },
-          "execution_count": 283,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "..."
+        "def p19(lst):\n",
+        "    return all(0.5 < x < 0.75 for x in lst)"
       ]
     },
     {
